# trading-bot

./: Dockerfile  README.md  entrypoint.sh  pyproject.toml
app/: main.py  trading_platform.py
app/wealthsimple/: wealthsimple.py
