[tool.poetry]
name = "trading-bot"
version = "0.0.1"
description = "A bot to make trades within websites"
authors = ["Tyler Kuipers <tkuipers123@gmail.com>"]
license = "GNU GPL 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.46.0"
fastapi = {extras = ["standard"], version = "^0.112.2"}
pyotp = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
